Se finaliza de configurar el proyecto, agregando las dependencias y seteos de la aplicacion